--- a/AppCalculadora/index.html
+++ b/AppCalculadora/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body>
+  
+  <body style="background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/fs/038364113045381.602042887ff1b.jpg) ; background-repeat: no-repeat; background-size: cover;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
